[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -213,7 +213,7 @@ update.downloadAndInstallButton.label=Hlaziyela kwi-%S
 update.downloadAndInstallButton.accesskey=H
 
 # RSS Pretty Print
-feedShowFeedNew=Rhuma kwi'%S'…
+feedShowFeedNew=Bhalisa kwi'%S'…
 
 menuOpenAllInTabs.label=Vula zonke iithebhu
 
@@ -290,7 +290,7 @@ offlineApps.notNow=Hayi Ngoku
 offlineApps.notNowAccessKey=N
 
 offlineApps.usage=Le webhusayithi (%S) ngoku igcina ngaphezu kwe-%SMB yeengcombolo kwikhompyutha yakho eziya kusetyenziswa ngaphandle kwenethiwekhi.
-offlineApps.manageUsage=Bonisa iisetingi
+offlineApps.manageUsage=Bonisa iisethingi
 offlineApps.manageUsageAccessKey=S
 
 # LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
@@ -415,7 +415,7 @@ safeModeRestartButton=Qalisa kwakhona
 # This is not a string to translate; it just controls whether the menu shows
 # up in the Firefox button. If users frequently use the "Character Encoding"
 # menu, set this to "true". Otherwise, you can leave it as "false".
-browser.menu.showCharacterEncoding=asiyonyaniso
+browser.menu.showCharacterEncoding=false
 
 # LOCALIZATION NOTE (syncPromoNotification.bookmarks.label): This appears in
 # the add bookmark star panel.  %S will be replaced by syncBrandShortName.
