--- a/xh/browser/chrome/browser/feeds/subscribe.properties
+++ b/xh/browser/chrome/browser/feeds/subscribe.properties
@@ -8,10 +8,10 @@ addHandlerAddButton=Yongeza iFido yoFundo
 addHandlerAddButtonAccesskey=A
 handlerRegistered="%S" sele ibhaliswe njengeFido yoFundo
 liveBookmarks=Izalathisi eziphawulayo eziphilayo
-subscribeNow=Rhuma Ngoku
+subscribeNow=Bhalisa Ngoku
 chooseApplicationMenuItem=Khetha i-Aplikheshini…
 chooseApplicationDialogTitle=Khetha i-Aplikheshini
-alwaysUse=Soloko usebenzisa i-%S ukurhuma kwiifidi
+alwaysUse=Soloko usebenzisa i-%S ukubhalisa kwiifido
 mediaLabel=Iifayile zemidiya
 
 # LOCALIZATION NOTE: The next string is for the size of the enclosed media.
@@ -29,13 +29,13 @@ gigabyte=I-GB
 # doing.
 #   e.g. alwaysUseForVideoPodcasts : "Always use Miro to subscribe to video podcasts."
 #   %S = application to use (Miro, iTunes, ...)
-alwaysUseForFeeds=Soloko usebenzisa i-%S ukurhuma kwiifidi.
-alwaysUseForAudioPodcasts=Soloko usebenzisa i-%S ukurhuma kwii-podcast.
-alwaysUseForVideoPodcasts=Soloko usebenzisa i-%S ukurhuma kwii-podcast zevidiyo.
+alwaysUseForFeeds=Soloko usebenzisa i-%S ukubhalisa kwiifidi.
+alwaysUseForAudioPodcasts=Soloko usebenzisa i-%S ukubhalisa kwii-podcast.
+alwaysUseForVideoPodcasts=Soloko usebenzisa i-%S ukubhalisa kwii-podcast zevidiyo.
 
-subscribeFeedUsing=Rhuma kule fido usebenzisa\u0020
-subscribeAudioPodcastUsing=Rhuma kule podcast usebenzisa\u0020
-subscribeVideoPodcastUsing=Rhuma kule podcast yevidiyo usebenzisa\u0020
+subscribeFeedUsing=Bhalisa kule fido usebenzisa\u0020
+subscribeAudioPodcastUsing=Bhalisa kule podcast usebenzisa\u0020
+subscribeVideoPodcastUsing=Bhalisa kule podcast yevidiyo usebenzisa\u0020
 
 feedSubscriptionFeed1=Le yi- "fido" yesiqulatho esiguqu-guquka ngokuphindelela kule sayithi.
 feedSubscriptionAudioPodcast1=Le yi- "podcast" yesiqulatho esiguqu-guquka ngokuphindelela kule sayithi.
