--- a/xh/browser/chrome/browser/syncSetup.properties
+++ b/xh/browser/chrome/browser/syncSetup.properties
@@ -61,6 +61,6 @@ disconnect.verify.description = I-%S iza kunqumamisa ungqamaniso lwe-akhawunti y
 relinkVerify.title = Dibanisa isilumkiso
 relinkVerify.heading = Uqinisekile ukuba ufuna ukungena kuNgqamaniso?
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
-relinkVerify.description = Umsebenzisi owahlukileyo ebengene kuNgqamaniso kule khompyutha. Ukungena kuya kudibanisa iibhukhmakhi, iipasiwedi, nezinye iisetingi zale bhrawuza ne-%S
+relinkVerify.description = Umsebenzisi owahlukileyo ebengene kuNgqamaniso kule khompyutha. Ukungena kuya kudibanisa iibhukhmakhi, iipasiwedi, nezinye iisethingi zale bhrawuza ne-%S
 
 manage.pageTitle = Lawula uNgqamaniso
