--- a/xh/services/sync/sync.properties
+++ b/xh/services/sync/sync.properties
@@ -24,7 +24,7 @@ error.logout.title = Impazamo Ngelixa uSayinela ukuPhuma
 error.logout.description = Ungqamaniso luhlangabezene nempazamo ngelixa linxibelelana.  Mhlawumbi inokuba ilungile, kwaye akufunekanga wenze nto ngayo.
 error.sync.title = Impazamo Ngelixa iNgqamanisa
 error.sync.description = Ungqamaniso luhlangabezene nempazamo ngelixa lingqamanisa: %1$S.  Ungqamaniso luya kusizama kwakhona esi senzo ngokuzenzekelayo.
-error.sync.prolonged_failure = Ungqamaniso alukwazanga ukugqiba ngexesha leentsuku ezi-%1$S ezigqithileyo. Nceda ukhangele iisetingi zenethiwekhi yakho.
+error.sync.prolonged_failure = Ungqamaniso alukwazanga ukugqiba ngexesha leentsuku ezi-%1$S ezigqithileyo. Nceda ukhangele iisethingi zenethiwekhi yakho.
 error.sync.serverStatusButton.label = Ubume beseva
 error.sync.serverStatusButton.accesskey = v
 error.sync.needUpdate.description = Kudingeka uhlaziye i-Firefox Sync ukuqhubeka nokungqamanisa ingcombolo yakho.
