--- a/xh/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/xh/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -39,7 +39,7 @@ notification.vulnerableUpdatable.link=Hlaziya ngoku
 notification.vulnerableNoUpdate=I%1$S yaziwa ngokuba lixhoba. Yisebenzise ngobulumko.
 notification.vulnerableNoUpdate.link=Ulwazi Olungaphaya Kolunikiweyo
 #LOCALIZATION NOTE (notification.enable) %1$S is the add-on name, %2$S is brand name
-notification.enable=I%1$S iya kuvumeleka emva kokuba uqalise kwakhona i%2$S.
+notification.enable=I-%1$S iya kuvumeleka emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.disable) %1$S is the add-on name, %2$S is brand name
 notification.disable=I-%1$S iya kuqhwaleliswa emva kokuba uqalise kwakhona i-%2$S.
 #LOCALIZATION NOTE (notification.install) %1$S is the add-on name, %2$S is brand name
@@ -53,7 +53,7 @@ notification.downloadError=Kubekho imposiso ekukhutshelweni kwe-%1$S.
 notification.downloadError.retry=Zama kwakhona
 notification.downloadError.retry.tooltip=Zama ukukhuphela esi songezelelo kwakhona
 #LOCALIZATION NOTE (notification.installError) %1$S is the add-on name.
-notification.installError=Kubekho imposiso ekufakelweni kwe%1$S.
+notification.installError=Kubekho imposiso ekufakelweni kwe-%1$S.
 notification.installError.retry=Zama kwakhona
 notification.installError.retry.tooltip=Zama ukukhuphela nokufakela esi songezelelo kwakhona
 #LOCALIZATION NOTE (notification.openH264Pending) OpenH264 will be automatically installed later.
