--- a/xh/toolkit/crashreporter/crashreporter.ini
+++ b/xh/toolkit/crashreporter/crashreporter.ini
@@ -51,7 +51,7 @@ ErrorDumpFileExists=I-aplikheyishini ayishiyanga ifayile yokonakala.
 ErrorDumpFileMove=Ayikwazanga ukufudusa ukonakala.
 ErrorNoProductName=I-aplikheyishini ayizazisanga.
 ErrorNoServerURL=I-aplikheyishini ayiyichazanga iseva yokuxela ukonakala.
-ErrorNoSettingsPath=Ayizifumenanga iisetingi zomxeli konakala.
+ErrorNoSettingsPath=Ayizifumenanga iisethingi zomxeli konakala.
 ErrorCreateDumpDir=Ayikwazanga ukwenza isalathisi esidlulayo.
 ; LOCALIZATION NOTE (ErrorEndOfLife): The %s is replaced with the product name.
 ErrorEndOfLife=Uhlelo %s olusebenzisayo alusaxhaswa. Iingxelo zokonakala zolu hlelo azisamkelwa. Nceda ucinge ngokuhlaziyela kuhlelo oluxhaswayo.
