--- a/xh/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/xh/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -33,7 +33,7 @@ profileNameEmpty=Igama lenkangeleko yesimo elingenanto alivunyelwa.
 invalidChar=Ikharakhtha "%S" ayivunyelwa kumagama eprofayile. Nceda ukhethe igama elahlukileyo.
 
 deleteTitle=Cima Inkangeleko Yesimo
-deleteProfileConfirm=Ukucima iprofayile kuya kushenxisa iprofayile kuluhlu lweeprofayile ezifumanekayo kwaye aziyi kulungiswa kwakhona.\nUsenokukhetha ukucima iifayile zengcombolo yeprofayile, ukuquka iisetingi zakho, izatifiketi kunye nenye ingcombolo eyelele kumsebenzisi. Oku kukhetha kuya kucima ifolda "%S" kwaye akunakulungiswa kwakhona.\nUngathanda ukuzicima iifayile zengcombolo yeprofayile?
+deleteProfileConfirm=Ukucima iprofayile kuya kushenxisa iprofayile kuluhlu lweeprofayile ezifumanekayo kwaye aziyi kulungiswa kwakhona.\nUsenokukhetha ukucima iifayile zengcombolo yeprofayile, ukuquka iisethingi zakho, izatifiketi kunye nenye ingcombolo eyelele kumsebenzisi. Oku kukhetha kuya kucima ifolda "%S" kwaye akunakulungiswa kwakhona.\nUngathanda ukuzicima iifayile zengcombolo yeprofayile?
 deleteFiles=Cima iifayile
 dontDeleteFiles=Musa Ukucima Iifayile
 
