[hi-IN] update from Pootle (mobile)

--- a/hi-IN/mobile/android/chrome/browser.properties
+++ b/hi-IN/mobile/android/chrome/browser.properties
@@ -166,7 +166,7 @@ newtabpopup.switch=स्विच करें
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
 # when the user closes a tab. %S is the title of the tab that was closed.
-undoCloseToast.message=%S बंद किया
+undoCloseToast.message=%S बंद किया\u0020
 
 # LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
 # toast when the user closes a tab if there is no title to display.
@@ -388,3 +388,4 @@ feedHandler.subscribeWith=इससे सदस्यता लें
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
+nativeWindow.deprecated=%S उपयोग योग्य नहीं है. उसकी बजाय %S का उपयोग करें
