[ro] update from Pootle (mobile)

--- a/ro/mobile/android/chrome/aboutReader.properties
+++ b/ro/mobile/android/chrome/aboutReader.properties
@@ -1,15 +1,3 @@
-# Translator(s):
-#
-# Alexandru Szasz <alexxed@gmail.com>
-# raulmalea <raul.malea@gmail.com>
-# Cristian Silaghi <cristian.silaghi@mozilla.ro>
-#
-# Reviewer(s):
-#
-# raulmalea <raul.malea@gmail.com>
-# Alexandru Szasz <alexxed@gmail.com>
-# Cristian Silaghi <cristian.silaghi@mozilla.ro>
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -22,10 +10,8 @@ aboutReader.colorSchemeDark=Închis
 aboutReader.colorSchemeSepia=Sepia
 aboutReader.colorSchemeAuto=Automat
 
-# LOCALIZATION NOTE (aboutReader.fontTypeCharis, aboutReader.fontTypeOpenSans):
+# LOCALIZATION NOTE (aboutReader.fontTypeSerif, aboutReader.fontTypeSansSerif):
 # These are the names of the fonts that are used.
-aboutReader.fontTypeCharis=Charis
-aboutReader.fontTypeOpenSans=Open Sans
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
 aboutReader.fontTypeSample=Aa
@@ -35,4 +21,3 @@ aboutReader.fontTypeSample=Aa
 aboutReader.fontSizeSample=A
 
 aboutReader.toolbarTip=Apăsați pe ecran pentru a afișa opțiunile pentru cititor
-
