--- a/ro/mobile/android/chrome/browser.properties
+++ b/ro/mobile/android/chrome/browser.properties
@@ -1,24 +1,3 @@
-# Translator(s):
-#
-# Alexandru Szasz <alexxed@gmail.com>
-# raulmalea <raul.malea@gmail.com>
-# janimo <jani@ubuntu.com>
-# xdaiana <xdaiana@yahoo.com>
-# Nicu <kneekoo@yahoo.com>
-# rz <rz@r2dev.ro>
-# secarica <orice@secarica.ro>
-# catafest <catalinfest@gmail.com>
-# Cristian Silaghi <cristian.silaghi@mozilla.ro>
-# stas <stas@nerd.ro>
-# alexef <alex@eftimie.ro>
-# adiroiban <adiroiban@gmail.com>
-#
-# Reviewer(s):
-#
-# Alexandru Szasz <alexxed@gmail.com>
-# raulmalea <raul.malea@gmail.com>
-# Cristian Silaghi <cristian.silaghi@mozilla.ro>
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -28,8 +7,11 @@ addonsConfirmInstall.install=Instalează
 
 # Alerts
 alertAddonsDownloading=Descărcare supliment
-alertAddonsInstalledNoRestart=Instalare completă
 alertAddonsFail=Instalare eșuată
+alertAddonsInstalledNoRestart.message=Instalare completă
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 alertDownloadsStart2=Descărcare pornită
 alertDownloadsDone2=Descărcare completă
@@ -37,8 +19,15 @@ alertCantOpenDownload=Fișierul nu poate fi deschis. Apăsați pentru a-l salva.
 alertDownloadsSize=Descărcare prea mare
 alertDownloadsNoSpace=Spațiu de stocare insuficient
 alertDownloadsToast=Descărcare începută…
+alertDownloadsResume=Continuă
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 alertFullScreenToast=Apăsați Înapoi pentru a ieși din ecranul complet
+
+# LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
+# %S will be replaced by the name of the search engine (exposed by the current page)
+# that has been added; for example, 'Google'.
 
 downloadCancelPromptTitle=Anulează descărcarea
 downloadCancelPromptMessage=Doriți să anulați descărcarea?
@@ -96,7 +85,6 @@ identity.encrypted2=Criptat
 identity.ownerUnknown3=necunoscut
 
 # Geolocation UI
-geolocation.allow=Împărtășește
 geolocation.dontAllow=Nu împărtăși
 geolocation.ask=Împărtășiți locația cu %S?
 # LOCALIZATION NOTE (geolocation.shareLocation): Label that will be used in
@@ -125,12 +113,38 @@ contacts.ask=Permiteți %S să acceseze contactele dumneavoastră?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Nu mai întreba iar pentru acest sait
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of tabs
 newtabpopup.opened=Filă nouă deschisă;#1 file noi deschise
 newprivatetabpopup.opened=O filă nouă fără urme deschisă;#1 file noi fără urme deschise
+
+# LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+
+# Undo close tab toast
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user closes a tab. %S is the title of the tab that was closed.
+
+# LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
+# toast when the user closes a tab if there is no title to display.
+
+# LOCALIZATION NOTE (undoCloseToast.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 # Offline web applications
 offlineApps.ask=Permiteți %S să stocheze date pe dispozitivul dumneavoastră pentru uz offline?
@@ -163,12 +177,12 @@ password.dontSave=Nu salva
 # menu, set this to "true". Otherwise, you can leave it as "false".
 browser.menu.showCharacterEncoding=false
 
-# LOCALIZATION NOTE (intl.charsetmenu.browser.static): Set to a series of comma separated
-# values for charsets that the user can select from in the Character Encoding menu.
-intl.charsetmenu.browser.static=utf-8,iso-8859-16,iso-8859-2,iso-8859-1,x-gbk,big5,iso-2022-jp,shift_jis,euc-jp
-
 # Text Selection
 selectionHelper.textCopied=Text copiat în clipboard
+
+# Casting
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.openInNewTab=Deschide legătura în filă nouă
@@ -192,7 +206,6 @@ contextmenu.shareImage=Partajare imagine
 contextmenu.search=Căutare %S
 contextmenu.saveImage=Salvează imaginea
 contextmenu.setImageAs=Setează imaginea ca
-contextmenu.addSearchEngine=Adăugare motor de căutare
 contextmenu.playMedia=Redare
 contextmenu.pauseMedia=Pauză
 contextmenu.shareMedia=Partajare video
@@ -202,12 +215,13 @@ contextmenu.unmute=Activează sonorul
 contextmenu.saveVideo=Salvare clip
 contextmenu.saveAudio=Salvare fișier audio
 contextmenu.addToContacts=Adaugă la contacte
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 contextmenu.copy=Copiază
-contextmenu.copyAll=Copiază tot
-contextmenu.selectWord=Selectează cuvântul
 contextmenu.selectAll=Selectează tot
 contextmenu.paste=Inserează
+
 
 # Select UI
 selectHelper.closeMultipleSelectDialog=Gata
@@ -232,16 +246,6 @@ timer.start=%S: cronometru pornit
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
-
-# Webapps
-webapps.installTitle=Instalează aplicația
-webapps.alertSuccess=Instalat cu succes
-# Shown when there is a generic problem installing an app
-webapps.installError=Eroare la instalarea aplicației
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Manifestul aplicației invalid
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Nu am putut descărca manifestul
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S conține conținut de modul. Doriți să îl activați?
@@ -273,6 +277,13 @@ remoteIncomingPromptDisable=Dezactivează
 remoteIncomingPromptAccept=Ok
 remoteIncomingPromptCancel=Renunțare
 
+# LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
+# if the name of the app is not available.
+remoteNotificationGenericName=Aplicație
+# LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
+# the remote debugger server is listening.
+
 # Helper apps
 helperapps.open=Deschide
 helperapps.ignore=Ignoră
@@ -294,11 +305,8 @@ getUserMedia.shareMicrophone.message = Doriți să partajați microfonul cu %S?
 getUserMedia.shareCameraAndMicrophone.message = Doriți să partajați camera și microfonul dumneavoastră cu %S?
 getUserMedia.denyRequest.label = Nu o împărtăși
 getUserMedia.shareRequest.label = Partajează
-getUserMedia.videoDevice.default = Camera %S
-getUserMedia.videoDevice.front = Camera frontală
-getUserMedia.videoDevice.back = Camera din spate
-getUserMedia.videoDevice.none = Niciun video
-getUserMedia.videoDevice.prompt = Camera de utilizat
+getUserMedia.videoSource.default = Camera %S
+getUserMedia.videoSource.none = Niciun video
 getUserMedia.audioDevice.default = Microfon %S
 getUserMedia.audioDevice.none = Niciun audio
 getUserMedia.audioDevice.prompt = Microfon de utilizat
@@ -310,3 +318,14 @@ getUserMedia.sharingCameraAndMicrophone.message2 = Camera și microfonul sunt po
 readerMode.enter = Intrare mod citire
 readerMode.exit = Ieșire mod citire
 
+#Open in App
+
+#Tab sharing
+#Tabs in context menus
+
+# "Subscribe to page" prompts created in FeedHandler.js
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
