--- a/ro/mobile/android/chrome/handling.properties
+++ b/ro/mobile/android/chrome/handling.properties
@@ -1,14 +1,7 @@
-# Translator(s):
-#
-# raulmalea <raul.malea@gmail.com>
-#
-# Reviewer(s):
-#
-# raulmalea <raul.malea@gmail.com>
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 protocol.failed=Nu am putut găsi o aplicație pentru a deschide această legătură
-
+# A very short string shown in the button toast when no application can open the url
+protocol.toast.search=Căutare
