--- a/ro/mobile/android/chrome/sync.properties
+++ b/ro/mobile/android/chrome/sync.properties
@@ -1,15 +1,3 @@
-# Translator(s):
-#
-# Cristian Silaghi <cristian.silaghi@mozilla.ro>
-# Alexandru Szasz <alexxed@gmail.com>
-# raulmalea <raul.malea@gmail.com>
-# xdaiana <xdaiana@yahoo.com>
-#
-# Reviewer(s):
-#
-# Alexandru Szasz <alexxed@gmail.com>
-# raulmalea <raul.malea@gmail.com>
-#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -44,3 +32,7 @@ sync.setup.manual=Configurare manuală
 
 sync.message.notabs=Nicio filă de pe alte calculatoare.
 
+# LOCALIZATION NOTE (promoBanner.message.text): First part of the message displayed in a
+# banner on about:home. The final space separates this text from the link.
+
+# LOCALIZATION NOTE (promoBanner.message.link): Second part of the message, styled as a link.
