[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/browser.properties
+++ b/xh/browser/chrome/browser/browser.properties
@@ -255,7 +255,7 @@ bookmarksMenuButton.tooltip=Bonisa iibhukhmakhi zakho (%S)
 # Star button
 starButtonOn.tooltip2=Hlela le bhukhmakhi (%S)
 starButtonOff.tooltip2=Faka ibhukhmakhi kweli khasi (%S)
-starButtonOverflowed.label=Faka Ibhukhmakhi Kweli Phepha
+starButtonOverflowed.label=Faka ibhukhmakhi kweli khasi
 starButtonOverflowedStarred.label=Hlela Le Bhukhmakhi
 
 # Downloads button tooltip
