--- a/nl/browser/chrome/browser/places/places.properties
+++ b/nl/browser/chrome/browser/places/places.properties
@@ -75,16 +75,16 @@ OrganizerQueryDownloads=Downloads
 OrganizerQueryAllBookmarks=Alle bladwijzers
 OrganizerQueryTags=Labels
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Label
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Bladwijzer
+switchtabResultLabel=Tabblad
+keywordResultLabel=Sleutelwoord
+searchengineResultLabel=Zoeken
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
