Bug 1065303 - Prepare autocomplete.xml/UnifiedComplete for adding new special result types and heuristics.

--- a/nl/toolkit/chrome/global/autocomplete.properties
+++ b/nl/toolkit/chrome/global/autocomplete.properties
@@ -12,3 +12,6 @@ searchWithEngine = Zoeken met %S
 # (e.g.: MSN Search).
 searchWithEngineForQuery = %2$S — Zoeken met %1$S
 switchToTab = Wisselen naar tabblad
+# LOCALIZATION NOTE (visitURL):
+# %S is the URL to visit.
+visitURL = %S bezoeken
