[xh] update from Pootle (firefox)

--- a/xh/browser/chrome/browser/loop/loop.properties
+++ b/xh/browser/chrome/browser/loop/loop.properties
@@ -17,7 +17,7 @@ invitee_name_label=Ngubani ommemayo?
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Isimemo siyakuphelelwa kusuku {{ixesha_lokuphelelwa}}: Isimemo siyakuphelelwa kwiintsuku {{ixesha_lokuphelelwa}}\u0020
+invitee_expire_days_label=Isimemo siyakuphelelwa kusuku {{expiry_time}}: Isimemo siyakuphelelwa kwiintsuku {{expiry_time}}
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -25,7 +25,7 @@ invitee_expire_days_label=Isimemo siyakuphelelwa kusuku {{ixesha_lokuphelelwa}}:
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Isimemo siyakuphelelwa kwiyure {{ixesha_lokuphelelwa}}; Isimemo siyakuphelelwa kwiiyure {{ixesha_lokuphelelwa}}
+invitee_expire_hours_label=Isimemo siyakuphelelwa kwiyure {{expiry_time}};Isimemo siyakuphelelwa kwiiyure {{expiry_time}}
 
 # Status text
 display_name_guest=Iindwendwe
@@ -55,7 +55,7 @@ retry_button=Phinda uzame
 share_email_subject3=Umenyelwe kwincoko
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Ukusamkela esisimemo, vela ukope okanye ucofe kwesi siqhagamshelo uqale incoko yakho: \n \n{{callUrl}}
+share_email_body3=Ukusamkela esisimemo, vela ukope okanye ucofe kwesi siqhagamshelo uqale incoko yakho: \n\n{{callUrl}}
 share_button=Imeyili
 copy_url_button=Kopa
 copied_url_button=Ikopiwe
