--- a/ja/browser/chrome/browser/browser.properties
+++ b/ja/browser/chrome/browser/browser.properties
@@ -100,6 +100,11 @@ popupWarningDontShowFromMessage		= ポップアップをブロックするとき
 popupWarningDontShowFromLocationbar	= ポップアップをブロックするとき、通知バーを表示しない
 popupShowPopupPrefix			= '%S' を表示
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message	= %S はこのページのコンテンツをブロックしています。
+badContentBlocked.notblocked.message	= %S はこのページのコンテンツをブロックしていません。
+
 # missing plugin installer
 installPlugin.message				= このページのメディアの表示に必要なプラグインをインストールしますか？
 installPlugin.button.label			= %S をインストール
@@ -452,6 +457,12 @@ webapps.install.accesskey	= I
 webapps.requestInstall		= このサイト (%2$S) から "%1$S" をインストールしますか？
 webapps.install.success		= アプリケーションをインストールしました
 webapps.install.inprogress	= アプリケーションをインストールしています
+webapps.uninstall		= アンインストール
+webapps.uninstall.accesskey	= U
+webapps.doNotUninstall		= アンインストールしない
+webapps.doNotUninstall.accesskey = D
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall	= "%1$S" をアンインストールしますか？
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered		= %S は現在全画面表示モードです。
@@ -512,10 +523,24 @@ getUserMedia.shareMicrophone.message		= マイクを %S と共有しますか？
 getUserMedia.shareScreen.message		= 画面を %S と共有しますか？
 getUserMedia.shareCameraAndMicrophone.message	= カメラとマイクを %S と共有しますか？
 getUserMedia.shareScreenAndMicrophone.message	= 画面とマイクを %S と共有しますか？
+getUserMedia.selectWindow.label			= 共有するウィンドウ:
+getUserMedia.selectWindow.accesskey		= W
+getUserMedia.selectScreen.label			= 共有するスクリーン:
+getUserMedia.selectScreen.accesskey		= S
+getUserMedia.selectApplication.label		= 共有するアプリケーション:
+getUserMedia.selectApplication.accesskey	= A
 getUserMedia.noVideo.label			= 映像なし
-getUserMedia.noWindowOrScreen.label		= ウィンドウまたは画面なし
+getUserMedia.noApplication.label		= アプリケーションなし
+getUserMedia.noScreen.label			= スクリーンなし
+getUserMedia.noWindow.label			= ウィンドウなし
 getUserMedia.noAudio.label			= 音声なし
 getUserMedia.shareEntireScreen.label		= 全画面
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label	= #1 (#2 ウィンドウ)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -523,6 +548,7 @@ getUserMedia.shareEntireScreen.label		= 全画面
 getUserMedia.shareSelectedDevices.label		= 選択したデバイスを共有
 getUserMedia.shareSelectedDevices.accesskey	= S
 getUserMedia.shareScreen.label			= 画面を共有
+getUserMedia.shareApplication.label		= 選択したアプリケーションを共有
 getUserMedia.shareWindow.label			= 選択したウィンドウを共有
 getUserMedia.shareSelectedItems.label		= 選択した項目を共有
 getUserMedia.always.label			= 常に共有
@@ -534,6 +560,7 @@ getUserMedia.never.accesskey			= N
 getUserMedia.sharingCamera.message2		= カメラをこのページと共有しています。
 getUserMedia.sharingMicrophone.message2		= マイクをこのページと共有しています。
 getUserMedia.sharingCameraAndMicrophone.message2	= カメラとマイクをこのページと共有しています。
+getUserMedia.sharingApplication.message		= アプリケーションをこのページと共有しています。
 getUserMedia.sharingScreen.message		= 画面をこのページと共有しています。
 getUserMedia.sharingWindow.message		= ウィンドウをこのページと共有しています。
 getUserMedia.continueSharing.label		= 共有を続行
@@ -541,13 +568,34 @@ getUserMedia.continueSharing.accesskey		= C
 getUserMedia.stopSharing.label			= 共有を中止
 getUserMedia.stopSharing.accesskey		= S
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message				= %S は安全でないコンテンツをブロックしました。
-mixedContentBlocked.keepBlockingButton.label		= ブロックを継続
-mixedContentBlocked.keepBlockingButton.accesskey	= B
-mixedContentBlocked.unblock.label			= このページの保護を無効にする
-mixedContentBlocked.unblock.accesskey			= D
+getUserMedia.sharingMenu.label			= 共有デバイスタブ
+getUserMedia.sharingMenu.accesskey		= d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera				= %S (カメラ)
+getUserMedia.sharingMenuMicrophone			= %S (マイク)
+getUserMedia.sharingMenuApplication			= %S (アプリケーション)
+getUserMedia.sharingMenuScreen				= %S (スクリーン)
+getUserMedia.sharingMenuWindow				= %S (ウィンドウ)
+getUserMedia.sharingMenuCameraMicrophone		= %S (カメラとマイク)
+getUserMedia.sharingMenuCameraMicrophoneApplication	= %S (カメラとマイク、アプリケーション)
+getUserMedia.sharingMenuCameraMicrophoneScreen		= %S (カメラとマイク、スクリーン)
+getUserMedia.sharingMenuCameraMicrophoneWindow		= %S (カメラとマイク、ウィンドウ)
+getUserMedia.sharingMenuMicrophoneApplication		= %S (マイクとアプリケーション)
+getUserMedia.sharingMenuMicrophoneScreen		= %S (マイクとスクリーン)
+getUserMedia.sharingMenuMicrophoneWindow		= %S (マイクとウィンドウ)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost			= 出自不明
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message					= %S の起動に時間がかかっています...
