--- a/ja/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ja/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel			= スクラッチパッドパネル
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip			= スクラッチパッド
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg				= 重大な警告: 自分で理解していないものを貼り付けるときは、よく注意してください。あなたの認証情報が傍受されたり、コンピュータが乗っ取られる可能性があります。貼り付けを許可するには、スクラッチパッド内に '%S' と入力してください。
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring			= allow pasting
