--- a/xh/browser/branding/official/brand.properties
+++ b/xh/browser/branding/official/brand.properties
@@ -2,9 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-brandShortName=I-Firefox
-brandFullName=I-Mozilla Firefox
-vendorShortName=I-Mozilla
+brandShortName=Firefox
+brandFullName=Mozilla Firefox
+vendorShortName=Mozilla
 
 homePageSingleStartMain=Ukuqalisa kwe-Firefox, ikhasi lasekhaya elikhawulezayo elinokukhangela okufakelweyo
 homePageImport=Thatha ngaphandle ikhasi lasekhaya lakho le-%S
