--- a/ja-JP-mac/browser/chrome/browser/shellservice.properties
+++ b/ja-JP-mac/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel			= %S の設定(&O)
 safeModeLabel			= %S セーフモード(&S)
-setDefaultBrowserTitle		= デフォルト Web ブラウザの設定
-setDefaultBrowserMessage	= %S は現在デフォルト Web ブラウザに設定されていません。デフォルト Web ブラウザに設定しますか？
-setDefaultBrowserDontAsk	= %S を起動するとき毎回デフォルト Web ブラウザを確認する
-alreadyDefaultBrowser		= %S はすでにデフォルト Web ブラウザに設定されています。
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = デフォルト Web ブラウザに設定して、%S を最大限に活用しましょう
+setDefaultBrowserConfirm.label     = %S をデフォルト Web ブラウザに設定する
+setDefaultBrowserConfirm.accesskey = U
+setDefaultBrowserOptions.label     = 設定
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = 後で
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = 次回から確認しない
+setDefaultBrowserNever.accesskey   = D
+
+
 desktopBackgroundLeafNameWin	= デスクトップ Background.bmp
 DesktopBackgroundDownloading	= 画像を保存...
 DesktopBackgroundSet		= デスクトップの背景に設定
