--- a/ja-JP-mac/browser/chrome/browser/preferences/preferences.properties
+++ b/ja-JP-mac/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll			= 以下の Cookie が保存されています:
 cookiesFiltered			= 以下の Cookie が検索にマッチしました:
 
 #### Offline apps
+offlineAppsList.height		= 7em
 offlineAppRemoveTitle		= オフライン作業用データの削除
 offlineAppRemovePrompt		= このデータを削除すると %S をオフラインでは利用できなくなります。この Web サイトをオフライン作業対象から外してもよろしいですか？
 offlineAppRemoveConfirm		= データを削除
