--- a/ja/webapprt/webapprt/webapp.properties
+++ b/ja/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title		= %S をインストールする
 webapps.install.description	= %S をインストールしますか？
 webapps.install.install		= アプリをインストール
 webapps.install.dontinstall	= インストールしない
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title		= %S をアンインストール
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description	= %S をアンインストールしますか？
+webapps.uninstall.uninstall	= アプリをアンインストール
+webapps.uninstall.dontuninstall	= アンインストールしない
 
 paymentDialog.title		= 支払い
 paymentDialog.message		= どの決済プロバイダを利用しますか？
