Bug 1056923 - WebIDE launch button: strings

--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -105,3 +105,8 @@ panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za defi
 
 web-apps-button.label = Aplikácie
 web-apps-button.tooltiptext = Objavte svet aplikácií
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Otvorí WebIDE
