[hi-IN] update from Pootle (firefox)

--- a/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hi-IN/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -35,7 +35,7 @@ add-ons-button.tooltiptext3 = अपनी सहयुक्ति प्रब
 
 switch-to-metro-button2.label = विंडोज 8 टच
 # LOCALIZATION NOTE(switch-to-metro-button2.tooltiptext): %S is the brand short name
-switch-to-metro-button2.tooltiptext = विंडोज 8 टच के लिए %S में पुन: लॉन्च\u0020
+switch-to-metro-button2.tooltiptext = विंडोज 8 टच के लिए %S में पुन: लॉन्च 
 
 preferences-button.label = वरीयता
 preferences-button.tooltiptext2 = वरीयताएँ खोलें
@@ -96,8 +96,6 @@ quit-button.tooltiptext.linux2 = बाहर निकलें %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = बाहर निकलें %1$S (%2$S)
-
-panic-button.label = भूलें
 
 loop-call-button.label = बात करने के लिए किसी को आमंत्रित करें
 loop-call-button.tooltiptext = बात करने के लिए किसी को आमंत्रित करें
