--- a/hi-IN/browser/chrome/browser/devtools/app-manager.properties
+++ b/hi-IN/browser/chrome/browser/devtools/app-manager.properties
@@ -12,7 +12,7 @@ connection.connectedToDevice=%1$S में जुड़ा
 connection.connectTo=%1$S:%2$S से कनेक्ट करें
 project.filePickerTitle=वेब अनुप्रयोग फ़ोल्डर का चयन करें
 project.installing=संस्थापित कर रहा है…
-project.installed=संस्थापित!\u0020
+project.installed=संस्थापित! 
 validator.nonExistingFolder=परियोजना फ़ोल्डर मौजूद नहीं है
 validator.expectProjectFolder=परियोजना फ़ोल्डर एक फाइल के रूप में समाप्त होता है
 validator.wrongManifestFileName=पैक किया अनुप्रयोग केवल परियोजना के रूट फ़ोल्डर में 'manifest.webapp' का नाम दिया जा सकता है कि एक मैनिफ़ेस्ट फ़ाइल की आवश्यकता होती है.
