--- a/hi-IN/browser/chrome/browser/devtools/debugger.properties
+++ b/hi-IN/browser/chrome/browser/devtools/debugger.properties
@@ -149,7 +149,7 @@ otherEvents=अन्य
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle black boxing its associated
 # source.
-blackBoxCheckboxTooltip=काला बॉक्सिंग टॉगल करें\u0020
+blackBoxCheckboxTooltip=काला बॉक्सिंग टॉगल करें 
 
 # LOCALIZATION NOTE (noMatchingStringsText): The text to display in the
 # global search results when there are no matching strings after filtering.
@@ -162,11 +162,11 @@ emptySearchText=खोज लिपियों (%S)
 # LOCALIZATION NOTE (emptyChromeGlobalsFilterText): This is the text that
 # appears in the filter text box when it is empty and the chrome globals
 # container is selected.
-emptyChromeGlobalsFilterText=क्रोम वैश्विक (%S) को फ़िल्टर करें\u0020
+emptyChromeGlobalsFilterText=क्रोम वैश्विक (%S) को फ़िल्टर करें 
 
 # LOCALIZATION NOTE (emptyVariablesFilterText): This is the text that
 # appears in the filter text box for the variables view container.
-emptyVariablesFilterText=चर को फ़िल्टर करें\u0020
+emptyVariablesFilterText=चर को फ़िल्टर करें 
 
 # LOCALIZATION NOTE (emptyPropertiesFilterText): This is the text that
 # appears in the filter text box for the editor's variables view bubble.
@@ -190,7 +190,7 @@ searchPanelToken=इस फ़ाइल में ढूँढ़ें (%S)
 
 # LOCALIZATION NOTE (searchPanelGoToLine): This is the text that appears in the
 # filter panel popup for the line search operation.
-searchPanelGoToLine=पंक्ति पर जाएँ (%S)\u0020
+searchPanelGoToLine=पंक्ति पर जाएँ (%S) 
 
 # LOCALIZATION NOTE (searchPanelVariable): This is the text that appears in the
 # filter panel popup for the variables search operation.
@@ -228,7 +228,7 @@ addWatchExpressionButton=निगरानी
 
 # LOCALIZATION NOTE (emptyVariablesText): The text that is displayed in the
 # variables pane when there are no variables to display.
-emptyVariablesText=दिखाने के लिए कोई चर नहीं\u0020
+emptyVariablesText=दिखाने के लिए कोई चर नहीं 
 
 # LOCALIZATION NOTE (scopeLabel): The text that is displayed in the variables
 # pane as a header for each variable scope (e.g. "Global scope, "With scope",
@@ -302,7 +302,7 @@ variablesSeparatorLabel=:
 
 # LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
 # in the watch expressions list as a separator between the code and evaluation.
-watchExpressionsSeparatorLabel=\u0020→
+watchExpressionsSeparatorLabel= →
 
 # LOCALIZATION NOTE (functionSearchSeparatorLabel): The text that is displayed
 # in the functions search panel as a separator between function's inferred name
