--- a/hi-IN/browser/chrome/browser/devtools/profiler.properties
+++ b/hi-IN/browser/chrome/browser/devtools/profiler.properties
@@ -62,14 +62,20 @@ profile.tab=%1$S ms → %2$S ms
 # This string is displayed in the framerate graph of the Profiler,
 # as the unit used to measure frames per second. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=एफपीएस
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=गेको
+category.css=शैली
+category.js=JIT
+category.gc=GC
 category.network=संजाल
 category.graphics=चित्रादि
 category.storage=भंडारण
+category.events=इनपुट व घटना
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -83,6 +89,7 @@ table.url.tooltiptext=स्रोत को डीबगर में देख
 # LOCALIZATION NOTE (table.zoom.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the 'zoom'
 # buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=नए वेब में फ्रेंम का मुआयन करें
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
