--- a/hi-IN/browser/chrome/browser/shellservice.properties
+++ b/hi-IN/browser/chrome/browser/shellservice.properties
@@ -7,10 +7,15 @@ safeModeLabel=%S व सुरक्षित मोड
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = %S से सबसे अधिक पाएँ अपने तयशुदा ब्राउज़र के रूप में सेट करके
+setDefaultBrowserConfirm.label     = मेरे %S तयशुदा ब्राउज़र का उपयोग(&U) करें
+setDefaultBrowserConfirm.accesskey = मेरे %S तयशुदा ब्राउज़र का उपयोग(&U) करें
 setDefaultBrowserOptions.label     = विकल्प
-setDefaultBrowserOptions.accesskey = O
-setDefaultBrowserNever.label       = Don't ask me again
-setDefaultBrowserNever.accesskey   = D
+setDefaultBrowserOptions.accesskey = विकल्प
+setDefaultBrowserNotNow.label      = अभी नहीं (&N)
+setDefaultBrowserNotNow.accesskey  = अभी नहीं (&N)
+setDefaultBrowserNever.label       = &Don't ask me again
+setDefaultBrowserNever.accesskey   = &Don't ask me again
 
 
 desktopBackgroundLeafNameWin=डेस्कटॉप पृष्ठभूमि.bmp
