--- a/hi-IN/dom/chrome/layout/css.properties
+++ b/hi-IN/dom/chrome/layout/css.properties
@@ -32,7 +32,7 @@ PEMozDocRuleBadFunc2=प्रत्याशित url(), url-prefix(), domain(
 PEMozDocRuleNotURI=प्रत्याशित URI @-moz-document नियम में लेकिन '%1$S' पाया.
 PEMozDocRuleNotString=Expected string in @-moz-document rule regexp() function but found '%1$S'.
 PEMozDocRuleEOF=@-moz-document नियम में अगला URI
-PEAtNSPrefixEOF=नामस्थान प्रत्यय @namespace नियम में\u0020
+PEAtNSPrefixEOF=नामस्थान प्रत्यय @namespace नियम में 
 PEAtNSURIEOF=नेमस्पेस URI @namespace नियम में
 PEAtNSUnexpected=अप्रत्याशित टोकेन @namespace के अंदर: '%1$S'.
 PEKeyframeNameEOF=@keyframes नियम का नाम.
