--- a/hi-IN/netwerk/necko.properties
+++ b/hi-IN/netwerk/necko.properties
@@ -31,7 +31,7 @@ ShowHidden=छिपी वस्तु दिखाएँ
 DirColName=नाम
 DirColSize=आकार
 DirColMTime=अंतिम रूपांतरित
-DirFileLabel=फाइल:\u0020
+DirFileLabel=फाइल: 
 
 PhishingAuth=आप "%1$S" को देखने के करीब हैं. यह साइट आपको ट्रिक करने का प्रयास हो सकता है उस सोच के साथ कि आप एक अलग साइट देख रहे हैं. बहुच सावधान रहें.
 PhishingAuthAccept=मैं समझा और ध्यान रखूंगा
