--- a/hi-IN/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/hi-IN/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -161,8 +161,8 @@ addon.purchase.label=%S के लिए खरीदें…
 addon.purchase.tooltip=सहयुक्ति दीर्घा का इस सहयुक्ति को खरीदने के लिए भ्रमण करें
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
-cmd.purchaseAddon.label=%S के लिए खरीदें… (u)
-cmd.purchaseAddon.accesskey=u
+cmd.purchaseAddon.label=%S के लिए खरीदें… (&u)
+cmd.purchaseAddon.accesskey=%S के लिए खरीदें… (&u)
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=%S चाहता है कि आप संस्थापन के जारी होने से पहले इस अंत्य उपयोक्ता लाइसेंस मसौदे को स्वीकार कर लें:
