--- a/hi-IN/browser/chrome/browser/devtools/scratchpad.properties
+++ b/hi-IN/browser/chrome/browser/devtools/scratchpad.properties
@@ -13,7 +13,7 @@
 
 # LOCALIZATION NOTE  (export.fileOverwriteConfirmation): This is displayed when
 # the user attempts to save to an already existing file.
-export.fileOverwriteConfirmation=File exists. Overwrite?
+export.fileOverwriteConfirmation=फ़ाइल मौजूद है. मिटाकर लिखें?
 
 # LOCALIZATION NOTE  (browserWindow.unavailable): This error message is shown
 # when Scratchpad does not find any recently active window of navigator:browser
@@ -107,6 +107,7 @@ scratchpad.tooltip=स्क्रैचपैड
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
+selfxss.msg= Scam Warning: Take care when pasting things you don't understand. This could allow attackers to steal your identity or take control of your computer. Please type '%S' below (no need to press enter) to allow pasting.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
