--- a/hi-IN/browser/chrome/browser/devtools/storage.properties
+++ b/hi-IN/browser/chrome/browser/devtools/storage.properties
@@ -11,37 +11,48 @@
 
 # LOCALIZATION NOTE  (storage.commandkey): This the key to use in
 # conjunction with shift to open the storage editor
+storage.commandkey=VK_F9
 
 # LOCALIZATION NOTE (storage.accesskey): The access key used to open the storage
 # editor.
+storage.accesskey=भंडारण
 
 # LOCALIZATION NOTE (storage.label):
 # This string is displayed as the label of the tab in the developer tools window
+storage.label=भंडारण
 
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=शैली इंस्पेक्टर
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
+storage.panelLabel=भंडारण पटल
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
+storage.tooltip2=शैली इंस्पेक्टर (कुकीज, स्नाथीय भंडारण…)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
 # there are no websites on the current page (about:blank)
+tree.emptyText=इस पृष्ठ पर कोई मेजबान नहीं
 
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
+table.emptyText=चयनित मेजबान के लिए कोई आँकड़ा अब मौजूद नहीं है
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=कूकीज
+tree.labels.localStorage=स्थानीय भंडारण
+tree.labels.sessionStorage=सत्र भंडार
+tree.labels.indexedDB=Indexed DB
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -49,6 +60,9 @@ tree.labels.cookies=कूकीज
 table.headers.cookies.name=नाम
 table.headers.cookies.path=पथ
 table.headers.cookies.host=डोमेन
+table.headers.cookies.expires=इसपर समाप्त
+table.headers.cookies.value=मान
+table.headers.cookies.lastAccessed=पिछली मर्तबा एक्सेस्ड
 table.headers.cookies.creationTime=को तैयार किया गया
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
@@ -64,19 +78,30 @@ table.headers.cookies.isSecure=isSecure
 table.headers.cookies.isDomain=isDomain
 
 table.headers.localStorage.name=कुंजी
+table.headers.localStorage.value=मान
 
 table.headers.sessionStorage.name=कुंजी
+table.headers.sessionStorage.value=मान
 
+table.headers.indexedDB.name=कुंजी
 table.headers.indexedDB.db=डेटाबेस का नाम
+table.headers.indexedDB.objectStore=वस्तु भंडारण नाम
+table.headers.indexedDB.value=मान
 table.headers.indexedDB.origin=उकाम
 table.headers.indexedDB.version=संस्करण
+table.headers.indexedDB.objectStores=वस्तु स्टोर
+table.headers.indexedDB.keyPath=कुंजी
+table.headers.indexedDB.autoIncrement=स्वचालित वृद्धि
+table.headers.indexedDB.indexes=सूची
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
 # Cookie
+label.expires.session=सत्र
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=मान फिल्टर करें
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
@@ -84,3 +109,4 @@ storage.data.label=आँकड़ा
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=विश्लेषित मान
