--- a/hi-IN/browser/chrome/browser/places/places.properties
+++ b/hi-IN/browser/chrome/browser/places/places.properties
@@ -28,24 +28,24 @@ sortByNameGeneric=नाम के अनुसार छाँटें
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
-view.sortBy.1.name.label=नाम के अनुसार छाँटें (N)
-view.sortBy.1.name.accesskey=N
-view.sortBy.1.url.label=स्थान के अनुसार छाँटें (L)
-view.sortBy.1.url.accesskey=L
-view.sortBy.1.date.label=सबसे हाल का विजिट के अनुसार छाँटें (V)
-view.sortBy.1.date.accesskey=V
-view.sortBy.1.visitCount.label=विजिट गिनती के अनुसार छाँटें (C)
-view.sortBy.1.visitCount.accesskey=C
-view.sortBy.1.keyword.label=कुंजी-शब्द के अनुसार छाँटें (K)
-view.sortBy.1.keyword.accesskey=K
-view.sortBy.1.description.label=विवरण के अनुसार छाँटें (D)
-view.sortBy.1.description.accesskey=D
-view.sortBy.1.dateAdded.label=जोड़े गए के अनुसार छाँटें (e)
-view.sortBy.1.dateAdded.accesskey=e
-view.sortBy.1.lastModified.label=अंतिम रूपांतरण के अनुसार छाँटें (M)
-view.sortBy.1.lastModified.accesskey=M
-view.sortBy.1.tags.label=टैग के अनुसार छाँटें (T)
-view.sortBy.1.tags.accesskey=T
+view.sortBy.1.name.label=नाम के अनुसार छाँटें (&N)
+view.sortBy.1.name.accesskey=नाम के अनुसार छाँटें (&N)
+view.sortBy.1.url.label=स्थान के अनुसार छाँटें (&L)
+view.sortBy.1.url.accesskey=स्थान के अनुसार छाँटें (&L)
+view.sortBy.1.date.label=सबसे हाल का विजिट के अनुसार छाँटें (&V)
+view.sortBy.1.date.accesskey=सबसे हाल का विजिट के अनुसार छाँटें (&V)
+view.sortBy.1.visitCount.label=विजिट गिनती के अनुसार छाँटें (&C)
+view.sortBy.1.visitCount.accesskey=विजिट गिनती के अनुसार छाँटें (&C)
+view.sortBy.1.keyword.label=कुंजी-शब्द के अनुसार छाँटें (&K)
+view.sortBy.1.keyword.accesskey=कुंजी-शब्द के अनुसार छाँटें (&K)
+view.sortBy.1.description.label=विवरण के अनुसार छाँटें (&D)
+view.sortBy.1.description.accesskey=विवरण के अनुसार छाँटें (&D)
+view.sortBy.1.dateAdded.label=जोड़े गए के अनुसार छाँटें (&e)
+view.sortBy.1.dateAdded.accesskey=जोड़े गए के अनुसार छाँटें (&e)
+view.sortBy.1.lastModified.label=अंतिम रूपांतरण के अनुसार छाँटें (&M)
+view.sortBy.1.lastModified.accesskey=अंतिम रूपांतरण के अनुसार छाँटें (&M)
+view.sortBy.1.tags.label=टैग के अनुसार छाँटें (&T)
+view.sortBy.1.tags.accesskey=टैग के अनुसार छाँटें (&T)
 
 searchBookmarks=पुस्तचिह्न खोजें
 searchHistory=इतिहास खोजें
@@ -90,5 +90,5 @@ bookmarkResultLabel=पुस्तचिह्न
 # %S will be replaced with the application name.
 lockPrompt.title=ब्राउज़र श्रीगणेश त्रुटि
 lockPrompt.text=ये पुस्तचिह्न व इतिहास तंत्र कार्यशील नहीं रहेगा क्योंकि %S के फ़ाइलों में से एक किसी दूसरे अनुप्रयोग के द्वारा प्रयोग में है. कुछ सुरक्षा सॉफ़्टवेयर इस समस्या का कारण बन सकता है.
-lockPromptInfoButton.label=अधिक जानें (L)
-lockPromptInfoButton.accessKey=L
+lockPromptInfoButton.label=अधिक जानें (&L)
+lockPromptInfoButton.accessKey=अधिक जानें (&L)
