--- a/hi-IN/browser/chrome/browser/quitDialog.properties
+++ b/hi-IN/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=सहेजें व छोड़ें (&S)
 neverAsk2=अगली बार मत पूछें
 message=क्या आप अगली बार %S को अपना टैब व विंडो सहेजना चाहते हैं जब यह आरंभ होता है?
 messageNoWindows=क्या आप %S को अपने टैब को सहेजना चाहते हैं जब अगली बार यह आरंभ होता है?
+messagePrivate=आप निजी ब्राउज़िंग अवस्था में हैं. %S को छोड़ना आपके सभी खुले टैब और विंडो को छोड़ देगा.
