--- a/hi-IN/browser/chrome/overrides/appstrings.properties
+++ b/hi-IN/browser/chrome/overrides/appstrings.properties
@@ -3,8 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 malformedURI=URL वैध नहीं है और लोड नहीं किया जा सकता है.
-fileNotFound=Firefox %S पर फाइल नहीं खोज सकता है.\u0020
-dnsNotFound=Firefox सर्वर को %S पर नहीं खोज सकता है. \u0020
+fileNotFound=Firefox %S पर फाइल नहीं खोज सकता है. 
+dnsNotFound=Firefox सर्वर को %S पर नहीं खोज सकता है.  
 unknownProtocolFound=Firefox पता को खोलना नहीं जानता है, क्योंकि वह पता को खोलना नहीं जानता है क्योंकि निम्नलिखित प्रोटोकॉल (%S) में कोई एक किसी प्रोग्राम से नहीं जुड़ा है.
 connectionFailure=Firefox सर्वर में %S पर संबंधन स्थापित नहीं कर सकता है.
 netInterrupt=%S में संबंधन में पृष्ठ लोडिंग के दौरान बाधा आई.
