--- a/hi-IN/toolkit/chrome/global/aboutSupport.properties
+++ b/hi-IN/toolkit/chrome/global/aboutSupport.properties
@@ -69,8 +69,8 @@ adapterDrivers = एडाप्टर ड्राइवर
 adapterRAM = एडाप्टर RAM
 driverVersion = ड्राइवर संस्करण
 driverDate = ड्राइवर दिनांक
-adapterDescription2 = एडाप्टर विवरण (GPU #2)\u0020
-adapterVendorID2 = विक्रेता ID (GPU #2)\u0020
+adapterDescription2 = एडाप्टर विवरण (GPU #2) 
+adapterVendorID2 = विक्रेता ID (GPU #2) 
 adapterDeviceID2 = युक्ति ID (GPU #2)
 adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = एडाप्टर ड्राइवर (GPU #2)
