--- a/hi-IN/toolkit/chrome/global/aboutTelemetry.properties
+++ b/hi-IN/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,7 +7,7 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = यह पृष्ठ प्रदर्शन, हार्डवेयर, उपयोग और मनपसंदीकरण के बारे मे दिखाता है  जो दूरमापी द्वारा एकत्रित है . यह  जानकारी %1$S में जमा है %2$S में सुधार करने के लिए
 
-slowSqlMain = \u0020धीरे sql निवेदन मुख्य क्रम पर\u0020
+slowSqlMain =  धीरे sql निवेदन मुख्य क्रम पर 
 
 slowSqlOther = धीरे sql निवेदन सहायक क्रम पर
 
@@ -30,7 +30,7 @@ stackTitle = ढेरी
 
 memoryMapTitle = स्मृति मानचित्र
 
-errorFetchingSymbols = \u0020एक त्रुटि हुई प्रतीक पाने वक्त . जाँचें जुडे हुए है इन्टरनेट से और फिर से कोशिश करे.
+errorFetchingSymbols =  एक त्रुटि हुई प्रतीक पाने वक्त . जाँचें जुडे हुए है इन्टरनेट से और फिर से कोशिश करे.
 
 histogramSamples = नमूने
 
