--- a/hi-IN/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/hi-IN/toolkit/chrome/global/devtools/styleinspector.properties
@@ -102,7 +102,7 @@ ruleView.contextmenu.showOrigSources.accessKey=ओ
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources): Text displayed in the rule view
 # context menu.
-ruleView.contextmenu.showCSSSources=दिखाएँ CSS स्रोत\u00A0
+ruleView.contextmenu.showCSSSources=दिखाएँ CSS स्रोत 
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
 # the rule view context menu "Show CSS sources" entry.
