--- a/hi-IN/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/hi-IN/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -42,7 +42,7 @@ dontGoOfflineButton=ऑनलाइन बने रहें
 dontEnterPrivateBrowsingButton=निजी ब्राउज़िंग मोड दाखिल मत करें
 dontLeavePrivateBrowsingButton=निजी ब्राउज़िंग मोड में बने रहें
 downloadsCompleteTitle=डाउनलोड पूर्ण
-downloadsCompleteMsg=सभी फाइलों ने डाउनलोडिंग समाप्त कर लिया.\u0020
+downloadsCompleteMsg=सभी फाइलों ने डाउनलोडिंग समाप्त कर लिया. 
 
 # LOCALIZATION NOTE (infiniteRate):
 # If download speed is a JavaScript Infinity value, this phrase is used
