--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -108,3 +108,8 @@ panic-button.tooltiptext = Effacer des données de l'historique de navigation
 
 web-apps-button.label = Applications
 web-apps-button.tooltiptext = Découvrir des applications
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Ouvrir WebIDE
