--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -66,7 +66,6 @@ retry_button=Réessayer
 share_email_subject4={{clientShortname}} — Rejoignez la conversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Pour accepter cette invitation, copiez simplement ce lien ou cliquez dessus pour démarrer votre conversation :\r\n\r\n{{callUrl}}
 share_email_body4=Bonjour !\r\n\r\nRejoignez-moi pour une conversation vidéo avec {{clientShortname}} :\r\n\r\nVous n'avez rien à télécharger ni à installer. Copiez puis collez simplement ce lien dans votre navigateur :\r\n\r\n{{callUrl}}\r\n\r\nVous pouvez également en apprendre davantage à propos de {{clientShortname}} sur {{learnMoreUrl}}\r\n\r\nÀ bientôt !
 share_button=Courriel
 share_button2=Envoyer le lien par courriel
@@ -99,6 +98,7 @@ new_contact_button=Nouveau contact
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nom
 new_contact_email_placeholder=Adresse électronique
+new_contact_phone_placeholder=Téléphone Firefox OS
 
 contacts_blocked_contacts=Contacts bloqués
 
@@ -294,6 +294,13 @@ feedback_report_user_button=Signaler l'utilisateur
 help_label=Aide
 tour_label=Visite guidée
 
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Conversation en cours;Conversations en cours
+rooms_list_no_current_conversations=Aucune conversation en cours
 rooms_default_room_name_template=Conversation {{conversationLabel}}
 rooms_leave_button_label=Quitter
 rooms_list_copy_url_tooltip=Copier le lien
