--- a/ja-JP-mac/mobile/android/chrome/webapp.properties
+++ b/ja-JP-mac/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 個のアップデートに失敗しました
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=%1$S のアップデートを取得するのに失敗しました
+
+webappsDisabledInGuest=ゲストセッションではアプリをインストールすることはできません
