--- a/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -82,3 +82,7 @@ panic-button.tooltiptext = Olvidarse de parte del historial de navegación
 
 web-apps-button.label = Apps
 web-apps-button.tooltiptext = Descubrir apps
+
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Abrir WebIDE
+
