--- a/es-CL/browser/chrome/browser/devtools/scratchpad.properties
+++ b/es-CL/browser/chrome/browser/devtools/scratchpad.properties
@@ -7,6 +7,7 @@ browserWindow.unavailable = Borrador no puede encontrar ninguna ventana de naveg
 scratchpadContext.invalid = Borrar no puede ejecutar esta operación en el modo actual.
 openFile.title = Abrir archivo
 openFile.failed = No se pudo escribir el archivo.
+importFromFile.convert.failed=Falló la conversión del archivo a Unicode desde %1$S.
 clearRecentMenuItems.label = Limpiar elementos
 saveFileAs = Guardar archivo como
 saveFile.failed = Falló la operación de guardar el archivo.
@@ -18,6 +19,7 @@ scratchpadIntro1 = /*\n * Este es un borrador de JavaScript.\n *\n * Ingrese un 
 scratchpad.noargs = El borrador fue creado sin ningún argumento.
 browserContext.notification = Este borrador se ejecuta en el contexto del navegador.
 help.openDocumentationPage = https://developer.mozilla.org/en/Tools/Scratchpad
+scratchpad.statusBarLineCol  = Línea %1$S, Columna %2$S
 fileNoLongerExists.notification = Este archivo ya no existe.
 propertiesFilterPlaceholder=Filtrar propiedades
 connectionTimeout = Tiempo de espera superado. Compruebe la Consola de errores en ambos extremos para encontrar mensajes de error potenciales. Reabra el borrador para intentar nuevamente.
